Article menu page created (html and css) and some small tweaks..

--- a/Foody.Web/Views/Articles/Index.cshtml
+++ b/Foody.Web/Views/Articles/Index.cshtml
@@ -3,5 +3,114 @@
     ViewData["Title"] = "Articles";
 }
 
-<h2>Articles</h2>
+<section class="article-menu-header">
+    <h2>Topics</h2>
+
+    <ul class="type-list">
+        <li><button class="type-selector-button">Nutrition</button></li>
+        <li><button class="type-selector-button">Exercise</button></li>
+        <li><button class="type-selector-button">Lifestyle</button></li>
+        <li><button class="type-selector-button">All</button></li>
+    </ul>
+</section>
+
+<section class="article-menu-tabs">
+    <h2>Articles</h2>
+
+    <ul class="article-tabs-list">
+        <li class="article-tab nutrition">
+            <a href="#">
+                <div class="image-container">
+                    <img src="https://www.ditchthecarbs.com/wp-content/uploads/2016/09/rsz_healthy-foods-for-a-low-carb-diet.jpg" />
+                </div>
+                <div class="tab-body">
+                    <h4 class="tab-header">Are carbohydrates dangerous?</h4>
+                    <p class="tab-text">Never has a topic galvanised the Diabetes Forum as much as the carbohydrate... </p>
+                    <p class="tab-footer">Posted by Tim Burton on <time>21.04.2019</time></p>
+                </div>
+            </a>
+        </li>
+
+        <li class="article-tab exercise">
+            <a href="#">
+                <div class="image-container">
+                    <img src="https://cdn1.coachmag.co.uk/sites/coachmag/files/styles/16x9_480/public/2018/08/full-body-exercises-deadlift.jpg?itok=ANX3e7Vd&timestamp=1534517890" />
+                </div>
+                <div class="tab-body">
+                    <h4 class="tab-header">Best whole body exercises</h4>
+                    <p class="tab-text">In order to maximise your gains you need to implement whole body exercises... </p>
+                    <p class="tab-footer">Posted by Yuri Gagarin on <time>11.04.1986</time></p>
+                </div>
+            </a>
+        </li>
+
+        <li class="article-tab lifestyle">
+            <a href="#">
+                <div class="image-container">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9WCTdejc7iLQQq1yLlnGRbcukk0fErA_qsCO-uFhef2Dk0tzT" />
+                </div>
+                <div class="tab-body">
+                    <h4 class="tab-header">Top 5 methods for relaxation</h4>
+                    <p class="tab-text">Relaxation after a stresful day or a heavy workout si crucial for one's health..</p>
+                    <p class="tab-footer">Posted by Kalin Lyubenov on <time>01.08.2019</time></p>
+                </div>
+            </a>
+        </li>
+
+        <li class="article-tab exercise">
+            <a href="#">
+                <div class="image-container">
+                    <img src="https://www.prodietreviews.com/wp-content/uploads/2017/09/best-cardio-workouts-abs-exercise.jpg" />
+                </div>
+                <div class="tab-body">
+                    <h4 class="tab-header">What about cardio workouts - a waste of time or a treasure?</h4>
+                    <p class="tab-text">Never skip leg day, or you will be frowned upon by everyone around you. You have been warned!</p>
+                    <p class="tab-footer">Posted by M. Night Shyamalan on <time>20.04.2019</time></p>
+                </div>
+            </a>
+        </li>
+
+        <li class="article-tab exercise">
+            <a href="#">
+                <div class="image-container">
+                    <img src="https://cdn1.coachmag.co.uk/sites/coachmag/files/styles/16x9_480/public/2018/08/full-body-exercises-deadlift.jpg?itok=ANX3e7Vd&timestamp=1534517890" />
+                </div>
+                <div class="tab-body">
+                    <h4 class="tab-header">Best whole body exercises</h4>
+                    <p class="tab-text">In order to maximise your gains you need to implement whole body exercises... </p>
+                    <p class="tab-footer">Posted by Yuri Gagarin on <time>11.04.1986</time></p>
+                </div>
+            </a>
+        </li>
+
+        <li class="article-tab lifestyle">
+            <a href="#">
+                <div class="image-container">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9WCTdejc7iLQQq1yLlnGRbcukk0fErA_qsCO-uFhef2Dk0tzT" />
+                </div>
+                <div class="tab-body">
+                    <h4 class="tab-header">Top 5 methods for relaxation</h4>
+                    <p class="tab-text">Relaxation after a stresful day or a heavy workout si crucial for one's health..</p>
+                    <p class="tab-footer">Posted by Kalin Lyubenov on <time>01.08.2019</time></p>
+                </div>
+            </a>
+        </li>
+
+        <li class="article-tab nutrition">
+            <a href="#">
+                <div class="image-container">
+                    <img src="https://www.ditchthecarbs.com/wp-content/uploads/2016/09/rsz_healthy-foods-for-a-low-carb-diet.jpg" />
+                </div>
+                <div class="tab-body">
+                    <h4 class="tab-header">Are carbohydrates dangerous?</h4>
+                    <p class="tab-text">Never has a topic galvanised the Diabetes Forum as much as the carbohydrate... </p>
+                    <p class="tab-footer">Posted by Tim Burton on <time>21.04.2019</time></p>
+                </div>
+            </a>
+        </li>
+    </ul>
+</section>
+
+
+
 
