--- a/Foody.Web/wwwroot/css/menu.scss
+++ b/Foody.Web/wwwroot/css/menu.scss
@@ -1,4 +1,5 @@
 ﻿.menu {
+    padding-top: 1.6rem;
     display: flex;
 }
 
@@ -35,6 +36,24 @@
         color: white;
         font-weight: 900;
         position: relative;
+
+        &:hover {
+            background-color: white;
+            color: var(--template-primary-color, blue);
+            border-color: var(--template-primary-color-invert, yellow);
+
+            &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                width: 3px;
+                z-index: 10;
+                background-color: white;
+                transform: translateX(3px);
+            }
+        }
     }
 
     & .clicked-item {
@@ -54,8 +73,12 @@
             bottom: 0;
             right: 0;
             width: 3px;
-            z-index: 10;
+            z-index: 15;
             background-color: white;
+        }
+
+        &:hover:after {
+            transform: translateX(0);
         }
     }
 }
