--- a/Foody.Web/wwwroot/css/navigation.scss
+++ b/Foody.Web/wwwroot/css/navigation.scss
@@ -16,8 +16,8 @@
 
             &:hover {
                 background-color: white;
-                color: #586C50;
-                transition-duration: 0.2s;
+                color: var(--template-primary-color, blue);
+                transition-duration: 0.3s;
                 border-color: var(--template-primary-color-invert, yellow);
             }
         }
@@ -39,13 +39,14 @@
 
         & span {
             position: absolute;
-            bottom: 5%;
+            bottom: 15%;
             left: 20%;
             font-size: 0.3em;
         }
 
         &:hover {
             color: var(--template-primary-color-invert, yellow);
+            transition-duration: 0.3s;
         }
     }
 
@@ -53,11 +54,11 @@
         margin-left: auto;
 
         & li {
-            padding: 0.5em 1em;
+            margin: 0.5em 1em;
         }
     }
 
     & .nav-left li {
-        padding: 0.5em 1em;
+        margin: 0.5em 1em;
     }
 }
