--- a/Foody.Web/wwwroot/css/site.scss
+++ b/Foody.Web/wwwroot/css/site.scss
@@ -1,7 +1,9 @@
 ﻿@import "variables";
+@import "animations";
 @import "typography";
 @import "navigation";
 @import "menu";
+@import "articles";
 
 * {
     padding: 0;
@@ -36,7 +38,7 @@ body {
 }
 
 .site-content {
-    padding-top: 8rem;
+    padding-top: 6.5rem;
 }
 
 .site-footer,
