Added some animations in administration menu and rounded up articles menu page..

--- a/Foody.Web/Views/Home/Index.cshtml
+++ b/Foody.Web/Views/Home/Index.cshtml
@@ -2,69 +2,38 @@
     ViewData["Title"] = "Home Page";
 }
 
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
-<p>Main page here</p>
+<main>
+    <div class="heading">
+        <img src="~/images/home-page-image.jpg" />
+    </div>
+
+    <div class="site-sections-container">
+        <div class="section-tab">
+            <h3>Diary</h3>
+            <p>Using your own personal diary gives you the opportunity to log your every meal and thus gaining a broader peek at your eating habbits. This is very important in uderstanding where your diet leads you in the long term. Some of the functions include:</p>
+            <ul>
+                <li>- Meal logging</li>
+                <li>- Automatic calorie calculation</li>
+                <li>- Periodic statistics and more..</li>
+            </ul>
+        </div>
+        <div class="section-tab">
+            <h3>Articles</h3>
+            <p>You are free to browse our ever expanding collection of variuos articles, which may help expand your view of the world of nutrition and well being. The general topics are:</p>
+            <ul>
+                <li>- Nutrrition</li>
+                <li>- Exercise</li>
+                <li>- Lifestyle</li>
+            </ul>
+        </div>
+        <div class="section-tab">
+            <h3>Knowledge Base</h3>
+            <p>You are free to browse our ever expanding collection of variuos articles, which may help expand your view of the world of nutrition and well being. The general topics are:</p>
+            <ul>
+                <li>- Nutrrition</li>
+                <li>- Exercise</li>
+                <li>- Lifestyle</li>
+            </ul>
+        </div>
+    </div>
+</main>
