--- a/Foody.Web/wwwroot/css/animations.scss
+++ b/Foody.Web/wwwroot/css/animations.scss
@@ -12,3 +12,35 @@
         transform: translateY(0rem);
     }
 }
+
+@keyframes menu-option-slide {
+    0% {
+        transform: translateX(10rem);
+    }
+
+    100% {
+        transform: translateX(0rem);
+    }
+}
+
+@keyframes menu-option-on-click-area-drop {
+    0% {
+        transform: translateX(10%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes menu-list-clicked-item-slide {
+    0% {
+        transform: translateX(-3rem);
+    }
+
+    100% {
+        transform: translateX(0rem);
+    }
+}
