Homepage initial design done..

--- a/Foody.Web/Views/Home/Index.cshtml
+++ b/Foody.Web/Views/Home/Index.cshtml
@@ -2,13 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<main>
+<main class="landing">
     <div class="heading">
+        <div class="heading-content">
+            <h2>WELCOME TO FOODY</h2>
+            <p>A complete guide to your nutrition planning and better health.</p>
+            <p>Below you can find out some of the great features you can use on our site..</p>
+        </div>
         <img src="~/images/home-page-image.jpg" />
     </div>
 
     <div class="site-sections-container">
-        <div class="section-tab">
+        <a href="#" class="section-tab">
             <h3>Diary</h3>
             <p>Using your own personal diary gives you the opportunity to log your every meal and thus gaining a broader peek at your eating habbits. This is very important in uderstanding where your diet leads you in the long term. Some of the functions include:</p>
             <ul>
@@ -16,8 +21,8 @@
                 <li>- Automatic calorie calculation</li>
                 <li>- Periodic statistics and more..</li>
             </ul>
-        </div>
-        <div class="section-tab">
+        </a>
+        <a href="#" class="section-tab">
             <h3>Articles</h3>
             <p>You are free to browse our ever expanding collection of variuos articles, which may help expand your view of the world of nutrition and well being. The general topics are:</p>
             <ul>
@@ -25,8 +30,8 @@
                 <li>- Exercise</li>
                 <li>- Lifestyle</li>
             </ul>
-        </div>
-        <div class="section-tab">
+        </a>
+        <a href="#" class="section-tab">
             <h3>Knowledge Base</h3>
             <p>You are free to browse our ever expanding collection of variuos articles, which may help expand your view of the world of nutrition and well being. The general topics are:</p>
             <ul>
@@ -34,6 +39,6 @@
                 <li>- Exercise</li>
                 <li>- Lifestyle</li>
             </ul>
-        </div>
+        </a>
     </div>
 </main>
