--- a/Foody.Web/wwwroot/css/menu.scss
+++ b/Foody.Web/wwwroot/css/menu.scss
@@ -141,7 +141,7 @@
         }
 
         &:hover {
-            background-color: #b4b4b4;
+            background-color: lightblue;
         }
     }
 
