--- a/Foody.Web/wwwroot/css/landing.scss
+++ b/Foody.Web/wwwroot/css/landing.scss
@@ -51,6 +51,10 @@
     & .site-sections-container {
         display: flex;
 
+        @include responsive( phone ) {
+            flex-direction: column;
+        }
+
         & .section-tab {
             flex: 1 0 33%;
             padding: 1em;
@@ -62,6 +66,7 @@
 
             &:hover {
                 opacity: 0.9;
+                text-shadow: 2px 2px black;
 
                 & h3 {
                     text-decoration: underline;
@@ -70,6 +75,10 @@
 
             & p {
                 padding: 2em 1em;
+
+                @include responsive( phone ) {
+                    padding: 2em 2em;
+                }
             }
 
             & h3 {
@@ -91,6 +100,10 @@
         & li {
             list-style: none outside;
             padding: 1em 1em;
+
+            @include responsive( phone ) {
+                padding: 0;
+            }
         }
 
         & .section-tab:nth-child(1) {
