--- a/Foody.Web/wwwroot/css/typography.scss
+++ b/Foody.Web/wwwroot/css/typography.scss
@@ -1,7 +1,33 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&display=swap');
 
 html {
-    font: 16px/1.5 Open Sans, sans-serif;
+    //font: 16px/1.5 Open Sans, sans-serif;
+    font-family: Open Sans, sans-serif;
+    line-height: 1.5;
+
+    @include responsive( desktop-large ) {
+        font-size: 18px;
+    }
+
+    @include responsive( desktop ) {
+        font-size: 16px;
+    }
+
+    @include responsive( laptop ) {
+        font-size: 16px;
+    }
+
+    @include responsive( mobile ) {
+        font-size: 14px;
+    }
+
+    @include responsive( phone ) {
+        font-size: 13px;
+    }
+
+    @include responsive( small-phone ) {
+        font-size: 12px;
+    }
 }
 
 
