Footer responsive design and some overall tweaks to various media queries..

--- a/Foody.Web/Views/Shared/_Layout.cshtml
+++ b/Foody.Web/Views/Shared/_Layout.cshtml
@@ -24,8 +24,6 @@
         </div>
     </header>
 
-    <partial name="_CookieConsentPartial" />
-
     <div class="site-content">
         <div class="wrapper">
             @RenderBody()
@@ -46,7 +44,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a></li>
                 </ul>
             </section>
-            <section class="Contacts">
+            <section class="footer-contacts">
                 <h3>Contacts</h3>
                 <ul>
                     <li>Address</li>
