--- a/Foody.Web/wwwroot/css/landing.scss
+++ b/Foody.Web/wwwroot/css/landing.scss
@@ -36,6 +36,25 @@
         text-shadow: 3px 3px black;
         text-align: center;
         z-index: 20;
+
+        & p {
+            font-size: 1.2em;
+            padding-top: 1em;
+
+            &:last-child {
+                padding-top: 0;
+            }
+        }
+
+        @include responsive( phone ) {
+            padding: 6em 2em;
+            font-size: 1.1em;
+        }
+
+        @include responsive( small-phone ) {
+            padding: 3em 1em;
+            font-size: 1.2em;
+        }
     }
 
     & .heading img {
@@ -78,6 +97,7 @@
 
                 @include responsive( phone ) {
                     padding: 2em 2em;
+                    font-size: 1.3em;
                 }
             }
 
@@ -103,7 +123,9 @@
 
             @include responsive( phone ) {
                 padding: 0;
+                font-size: 1.3em;
             }
+
         }
 
         & .section-tab:nth-child(1) {
